home page base styling2

--- a/Style/Home.css
+++ b/Style/Home.css
@@ -37,9 +37,72 @@ nav {
     margin: 15px 100px 0px;
 }
 
-.img-main{
-    width:100%;
-    margin-top:30px;
-    
+.div-main{
+    margin-top:20px;
+    background-image: url('../Assets/main2.jpg');
+    height:1000px;
+    background-repeat:no-repeat;
+    background-size:cover;
+    z-index:3;
+}
+
+.main-txt {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: center;
+    font-size: 35px;
+    color: #FFC23C;
+}
+
+.join {
+    text-align: center;
+    font-size: 25px;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    width: 400px;
+    height: 70px;
+    border: none;
+    background-color: #FFC23C;
+    border-radius: 25px;
+    color: #31087B;
+    font-weight:900;
+}
+
+.inside{
+    position:relative;
+    top:33%;
+    z-index:5;
+}
+
+.blur-div {
+    width: 100%;
+    height: 300px;
+    background-color: #31087B;
+    position: relative;
+    top: 8%;
+    z-index: 4;
+    opacity: 0.5;
+}
+
+.benefit-div{
+    width:500px;
+    border: solid 1px black;
+}
+
+.benefits{
+    text-align:center;
+}
+
+.in-benefits{
+    display: flex;
+    margin-right:0;
+    margin-left:0;
+}
+
+.benefit-div{
+    margin:0px 50px;
+
 }
 
