--- a/Style/Register.css
+++ b/Style/Register.css
@@ -1,10 +1,15 @@
 ﻿body {
     margin: 0;
     padding: 0;
-    background-color: black;
     font-family: "Bebas Neue", sans-serif;
     color: white;
     background-image: url('../assets/img/home/bartek-garbowicz-xjeclqsbuqc-unsplash.jpg');
+}
+
+.bebas-neue-regular {
+    font-family: "Bebas Neue", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 .outer {
@@ -13,7 +18,6 @@
     height: 100vh;
     justify-content: center;
     text-align: center;
-    
 }
 
 form {
@@ -22,14 +26,17 @@ form {
     border-radius: 10px;
     box-shadow: 5px 5px 5px white;
     backdrop-filter: blur(1px);
-    background-color: rgba(255, 255, 255, 0.2)
+    background-color: rgba(255, 255, 255, 0.2);
+    text-align:center;
 }
 
-h1 {
-    font-size: 90px;
+.InputContainer{
+    margin-top:20px;
+    display:flex;
+    justify-content:flex-start
 }
 
-.login {
+#RegisterBtn {
     border: none;
     background-color: black;
     color: white;
@@ -40,18 +47,41 @@ h1 {
     margin-top: 30px;
 }
 
-.login:hover{
+#RegisterBtn:hover {
     color: black;
     background-color: white;
 }
 
-input {
-    width: 300px;
-    margin-bottom: 20px;
+.input{
+    width: 200px;
+    margin-bottom: 10px;
+    margin-right:20px;
+    margin-left:20px;
     height: 30px;
     border: none;
-    border-radius:10px;
+    border-radius: 10px;
     background-color: black;
     padding: 10px;
     color: white;
+    font-weight:bolder;
+}
+
+.label{
+    color:pink;
+}
+
+.DDLDRIZZY{
+    margin-left:20px;
+    width:100px;
+    color:white;
+    background-color:black;
+    border:none;
+    height:30px;
+    border-radius:5px;
+    font-weight:bolder;
+}
+
+.InsideContainer{
+    display:flex;
+    flex-direction:column;
 }
