--- a/Style/Register.css
+++ b/Style/Register.css
@@ -40,11 +40,12 @@ form {
     border: none;
     background-color: black;
     color: white;
-    width: 100px;
+    width: 300px;
     height: 40px;
     font-weight: bolder;
     transition: 1s;
-    margin-top: 30px;
+    margin-top: 50px;
+    border-radius:10px;
 }
 
 #RegisterBtn:hover {
