--- a/Layouts/Header.Master
+++ b/Layouts/Header.Master
@@ -26,6 +26,7 @@
                 <asp:Button class="btn" ID="TrainerButton" runat="server" Text="Trainer" OnClick="TrainerButton_Click" />
                 <asp:Button class="btn" ID="ExerciseButton" runat="server" Text="Exercise" OnClick="ExerciseButton_Click" />
                 <asp:ImageButton ID="ProfileButton" runat="server" OnClick="ProfileButton_Click" />
+                <asp:Button ID="StudentButton" runat="server" Text="Student" OnClick="StudentButton_Click"/>
             </nav>
             <div>
                 <asp:Label CssClass="status" ID="LogStatusLbl" runat="server" Text=""></asp:Label>
