--- a/Style/Homee.css
+++ b/Style/Homee.css
@@ -34,11 +34,11 @@
 
 .join {
     text-align: center;
-    font-size: 25px;
+    font-size: 1vw;
     margin-left: auto;
     margin-right: auto;
-    width: 200px;
-    height: 70px;
+    width: 10vw;
+    height: 2vw;
     border: none;
     background-color: transparent;
     border-radius: 10px;
