--- a/Style/Master.css
+++ b/Style/Master.css
@@ -37,9 +37,11 @@ h1 {
 .title {
     text-align: left;
     position: absolute;
-    left: 20px;
+    left: 50px;
     padding: 0;
-    margin: 14px 30px 0px;
+    top:22px;
+    margin:0;
+    /*margin: 14px 30px 0px;*/
     color: white;
     font-size: 30px;
     font-family: "Plus Jakarta Sans", sans-serif;
@@ -61,28 +63,27 @@ h1 {
     /*padding: 10px 40px 10px;*/
     padding-top:10px;
     padding-bottom:10px;
-
-
     background-color: white;
     border: none;
     border-radius: 8px;
     font-weight: 900;
     margin-right:10px;
     transition:0.5s;
-    font-size: 1vw;
+    font-size: 0.7vw;
     width:5vw;
 }
 
 nav {
     position: absolute;
+    top:22px;
     right: 0;
     /*margin: 22px 100px 0px;*/
     margin-right:100px;
-    margin-top:0.7vw;
+
 }
 
 .status{
-    color:black
+    display:none;
 }
 
 .logout{
