--- a/Style/ViewStudent.css
+++ b/Style/ViewStudent.css
@@ -24,7 +24,7 @@
     margin-left:auto;
     margin-right:auto;
     display:flex;
-  
+    
 }
 
 .img-bg {
@@ -40,4 +40,5 @@
     align-items:center;
     font-size: 2.5vw;
     width:70%;
+    font-weight:bolder;
 }
