--- a/Style/Meal.css
+++ b/Style/Meal.css
@@ -20,7 +20,7 @@
 }
 
 .today-meal{
-    background-color:rgb(128, 128, 128, 0.5);
+    background-color: #242424;
     backdrop-filter:blur(3px);
     width:1000px;
     margin-left:auto;
