--- a/Style/EditProfile.css
+++ b/Style/EditProfile.css
@@ -8,7 +8,8 @@
 
 .img {
     border-radius: 100%;
-    border: 1px solid white
+    border: 1px solid white;
+    object-fit:cover;
 }
 
 .bot-div{
