--- a/Style/Master.css
+++ b/Style/Master.css
@@ -17,9 +17,9 @@ h1 {
     width:30px;
     background-color:blue;
     border-radius:100px;
-    border:1px solid white;
     margin-left:24px;
     margin-top:2px;
+    object-fit:cover;
 }
 
 .header {
